# axiam

./: .dockerignore  .gitignore  .hadolint.yaml  .trivyignore.yaml  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  INSTRUCTION.md  README.md  buf.gen.yaml  buf.yaml  clippy.toml  deny.toml  index.html  justfile
benchmarks/sdk/c/: CMakeLists.txt  TODO.md  bench.c  run.sh
benchmarks/sdk/cpp/: CMakeLists.txt  TODO.md  bench.cpp  run.sh
benchmarks/sdk/rust/: Cargo.toml  TODO.md  run.sh
benchmarks/sdk/rust/src/: main.rs
crates/axiam-amqp/: Cargo.toml
crates/axiam-amqp/src/: audit_consumer.rs  authz_consumer.rs  config.rs  connection.rs  error.rs  lib.rs  mail_consumer.rs  mail_publisher.rs  messages.rs  notification_publisher.rs  webhook_publisher.rs
crates/axiam-amqp/tests/: audit_consumer_test.rs  authz_consumer_test.rs  mail_consumer_template_test.rs  mail_consumer_test.rs  mail_send.rs  reference_vectors.rs
crates/axiam-api-grpc/: Cargo.toml  build.rs
crates/axiam-api-grpc/src/: config.rs  lib.rs  server.rs
crates/axiam-api-grpc/src/middleware/: auth.rs  mod.rs  rate_limit.rs
crates/axiam-api-grpc/src/services/: authorization.rs  mod.rs  token.rs  user.rs  userinfo.rs
crates/axiam-api-grpc/tests/: grpc_auth_test.rs  grpc_authz_test.rs  grpc_server_test.rs  grpc_units.rs  grpc_userinfo_test.rs  rate_limit_shared_store_test.rs
crates/axiam-api-rest/: Cargo.toml
crates/axiam-api-rest/src/: authz.rs  config.rs  error.rs  health.rs  lib.rs  openapi.rs  permissions.rs  server.rs  state.rs  webhook.rs  webhook_consumer.rs
crates/axiam-api-rest/src/config/: mod.rs  rate_limit.rs
crates/axiam-api-rest/src/extractors/: auth.rs  cert_auth.rs  client_info.rs  mod.rs  rate_limit.rs  tenant.rs
crates/axiam-api-rest/src/handlers/: audit.rs  auth.rs  gdpr.rs  (+26 more)
crates/axiam-api-rest/tests/: audit_test.rs  auth_test.rs  bootstrap_test.rs  ca_certificate_test.rs  certificate_test.rs  csrf_crud_test.rs  device_auth_test.rs  email_config_test.rs  email_verification_test.rs  federation_first_time_sso_test.rs  federation_test.rs  gdpr_audit_dlq_test.rs  gdpr_handlers_test.rs  gdpr_test.rs  group_test.rs  health_test.rs  mfa_methods_test.rs  mfa_reset_still_revokes.rs  middleware_test.rs  notification_rules_test.rs  oauth2_client_test.rs  oauth2_conformance.rs  oauth2_flow_test.rs  oidc_conformance.rs  organization_test.rs  password_change.rs  password_reset_gaps_test.rs  password_reset_revokes_sessions.rs  pgp_key_gaps_test.rs  pgp_key_test.rs  qual03_error_taxonomy_test.rs  rate_limit_client_identity_test.rs  rate_limit_keying_test.rs  rate_limit_shared_store_test.rs  rbac_handlers_gaps_test.rs  rbac_test.rs  req14_error_body_test.rs  req14_pepper_test.rs  resource_scope_test.rs  role_permission_test.rs  (+8 more)
crates/axiam-auth/: Cargo.toml
crates/axiam-auth/benches/: auth_bench.rs
crates/axiam-auth/src/: config.rs  crypto.rs  crypto_gate.rs  error.rs  hibp_breaker.rs  lib.rs  lockout.rs  mfa_methods.rs  password.rs  password_reset.rs  policy.rs  service.rs  token.rs  totp.rs  verification.rs  webauthn.rs
crates/axiam-auth/tests/: auth_service_test.rs  config_tests.rs  mfa_methods_test.rs  req14_async_safety_test.rs  req14_totp_replay_test.rs  webauthn_tests.rs
crates/axiam-authz/: Cargo.toml
crates/axiam-authz/benches/: authz_bench.rs
crates/axiam-authz/src/: config.rs  decision_cache.rs  engine.rs  lib.rs  types.rs
crates/axiam-authz/tests/: authz_engine_test.rs  batch_coalescing_test.rs  decision_cache_integration_test.rs
crates/axiam-core/: Cargo.toml
crates/axiam-core/src/: error.rs  lib.rs  models.rs  repository.rs
crates/axiam-core/tests/: models_coverage.rs  req14_pagination_test.rs
crates/axiam-db/: Cargo.toml
crates/axiam-db/src/: connection.rs  error.rs  helpers.rs  lib.rs  metrics.rs  pool.rs  schema.rs  seeder.rs
crates/axiam-db/tests/: amqp_nonce_replay_test.rs  audit_repository_test.rs  ca_certificate_repository_test.rs  certificate_repository_test.rs  connection_resilience_test.rs  email_template_repository_test.rs  federation_login_state.rs  group_repository_test.rs  notification_rule_repository_test.rs  oauth2_refresh_revoke_all.rs  oauth2_refresh_token_gaps_test.rs  password_history_repository_test.rs  pgp_key_repository_test.rs  reconnect_regression.rs  repository_test.rs  req14_settings_migration_test.rs  req14_tenant_isolation_test.rs  resource_repository_gaps_test.rs  resource_scope_test.rs  role_permission_test.rs  role_repository_gaps_test.rs  saml_replay.rs  schema_test.rs  seeder_default_data_test.rs  seeder_skip_test.rs  service_account_session_test.rs  session_invalidate_except.rs  settings_repository_gaps_test.rs  small_gaps_test.rs  totp_step_cas_test.rs  uncovered_repos_test.rs  user_repository_gaps_test.rs  user_repository_test.rs  webauthn_credential_test.rs
crates/axiam-email/: Cargo.toml
crates/axiam-email/src/: lib.rs  message.rs  provider.rs  service.rs  template.rs
crates/axiam-email/tests/: providers_http.rs  service.rs
crates/axiam-federation/: Cargo.toml
crates/axiam-federation/src/: cert.rs  discovery_cache.rs  error.rs  jwks_cache.rs  lib.rs  oidc.rs  saml.rs  secrets.rs  ssrf.rs
crates/axiam-federation/tests/: secrets_and_errors.rs
crates/axiam-oauth2/: Cargo.toml
crates/axiam-oauth2/src/: authorize.rs  error.rs  jwks_cache.rs  lib.rs  oidc.rs  pkce.rs  token.rs
crates/axiam-oauth2/tests/: token_service.rs
crates/axiam-pki/: Cargo.toml
crates/axiam-pki/benches/: cert_bench.rs
crates/axiam-pki/src/: ca.rs  cert.rs  config.rs  crypto.rs  lib.rs  mtls.rs  pgp.rs
crates/axiam-pki/tests/: ca_test.rs  cert_test.rs  crud_test.rs  mtls_chain_test.rs  mtls_test.rs  pgp_test.rs  req14_pki_failfast_test.rs
crates/axiam-server/: Cargo.toml
crates/axiam-server/src/: cleanup.rs  lib.rs  main.rs  tls.rs
crates/axiam-server/tests/: cleanup_task.rs  federation_secret_backfill.rs  grpc_tls_crypto_provider.rs  healthcheck.rs  req14_gdpr_test.rs  req5_clock_skew.rs  req5_oidc_e2e.rs  req5_saml_e2e.rs  req5_secret_at_rest.rs  req7_service_account_aud.rs  req7_session_lifecycle.rs
(+4278 files in other folders)
