[workspace]
members = [
    "crates/axiam-core",
    "crates/axiam-db",
    "crates/axiam-auth",
    "crates/axiam-authz",
    "crates/axiam-api-rest",
    "crates/axiam-api-grpc",
    "crates/axiam-amqp",
    "crates/axiam-oauth2",
    "crates/axiam-federation",
    "crates/axiam-audit",
    "crates/axiam-server",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["AXIAM Contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/emanuele/axiam"
rust-version = "1.93"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
actix-web = "4"
actix-rt = "2"

# gRPC
tonic = "0.14"
prost = "0.14"
tonic-build = "0.14"

# AMQP
lapin = "4"

# Database
surrealdb = "3"

# Authentication & Crypto
jsonwebtoken = "10"
argon2 = "0.5"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
rand = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.15"

# OpenAPI
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

# TLS
rustls = "0.23"

# Testing
tokio-test = "0.4"

# Internal crates
axiam-core = { path = "crates/axiam-core" }
axiam-db = { path = "crates/axiam-db" }
axiam-auth = { path = "crates/axiam-auth" }
axiam-authz = { path = "crates/axiam-authz" }
axiam-api-rest = { path = "crates/axiam-api-rest" }
axiam-api-grpc = { path = "crates/axiam-api-grpc" }
axiam-amqp = { path = "crates/axiam-amqp" }
axiam-oauth2 = { path = "crates/axiam-oauth2" }
axiam-federation = { path = "crates/axiam-federation" }
axiam-audit = { path = "crates/axiam-audit" }
