[workspace]
members = [
    "crates/axiam-core",
    "crates/axiam-db",
    "crates/axiam-auth",
    "crates/axiam-authz",
    "crates/axiam-api-rest",
    "crates/axiam-api-grpc",
    "crates/axiam-amqp",
    "crates/axiam-oauth2",
    "crates/axiam-federation",
    "crates/axiam-audit",
    "crates/axiam-pki",
    "crates/axiam-email",
    "crates/axiam-server",
]
resolver = "3"

[workspace.package]
version = "1.0.0-beta"
edition = "2024"
authors = ["AXIAM Contributors"]
license = "Apache-2.0"
repository = "https://github.com/emanuele/axiam"
rust-version = "1.93"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
actix-web = "4"
actix-rt = "2"
actix-http = "3"
actix-cors = "0.7"
actix-governor = "0.10"
tower_governor = { version = "0.8", features = ["tonic"] }
governor = "0.10"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
tracing-actix-web = "0.7"

# gRPC
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"

# AMQP
lapin = "4"
futures-lite = "2"

# Database
surrealdb = "3"

# Authentication & Crypto
jsonwebtoken = "10"
argon2 = "0.5"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
rand = "0.10"
hmac = "0.12"
hkdf = "0.12"
sha1 = "0.11"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
subtle = "2"
base64 = "0.22"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
aes-gcm = "0.10"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
zeroize = "1"
secrecy = { version = "0.10", features = ["serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "tracing-log"] }

# Configuration
config = "0.15"

# OpenAPI
utoipa = { version = "5", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

# PKI / X.509 / OpenPGP
rcgen = "0.13"
x509-parser = { version = "0.18", features = ["verify"] }
pgp = "0.20"
pem = "3"

# SAML
samael = { version = "0.0.22", features = ["xmlsec"] }
flate2 = "1"
# XSW (XML Signature Wrapping) binding check (SECFIX-04/SEC-005). Already
# resolved transitively via samael's `xmlsec` feature (Cargo.lock pins
# 0.3.3) — pinned here to the EXACT resolved version so promoting it to a
# direct dependency of axiam-federation does not introduce a second copy
# of the FFI bindings.
libxml = "=0.3.3"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# TLS
rustls = "0.23"

# Testing
tokio-test = "0.4"

# Internal crates
axiam-core = { path = "crates/axiam-core" }
axiam-db = { path = "crates/axiam-db" }
axiam-auth = { path = "crates/axiam-auth" }
axiam-authz = { path = "crates/axiam-authz" }
# default-features = false so SAML/samael is opt-in: api-rest and axiam-server
# re-enable it through their own `saml` feature (on by default). This lets the
# whole workspace build `--no-default-features` on hosts whose system libxml2 is
# incompatible with samael (e.g. Arch libxml2 2.15.x).
axiam-api-rest = { path = "crates/axiam-api-rest", default-features = false }
axiam-api-grpc = { path = "crates/axiam-api-grpc" }
axiam-amqp = { path = "crates/axiam-amqp" }
axiam-oauth2 = { path = "crates/axiam-oauth2" }
axiam-federation = { path = "crates/axiam-federation", default-features = false }
axiam-audit = { path = "crates/axiam-audit" }
axiam-email = { path = "crates/axiam-email" }
axiam-pki = { path = "crates/axiam-pki" }
