[package]
name = "axiam-amqp"
description = "AXIAM AMQP integration for async authorization and event processing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axiam-core = { workspace = true }
axiam-authz = { workspace = true }
axiam-audit = { workspace = true }
axiam-email = { workspace = true }
chrono = { workspace = true }
futures-lite = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
lapin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
axiam-db = { workspace = true }
surrealdb = { workspace = true, features = ["kv-mem"] }
tokio-test = { workspace = true }
