[package]
name = "axiam-api-grpc"
description = "AXIAM gRPC API built with Tonic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axiam-core = { workspace = true }
axiam-authz = { workspace = true }
axiam-auth = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tower_governor = { workspace = true }
governor = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

[features]
client = []

[dev-dependencies]
axiam-db = { path = "../axiam-db" }
axiam-auth = { workspace = true }
surrealdb = { workspace = true, features = ["kv-mem"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
