[package]
name = "axiam-api-grpc"
description = "AXIAM gRPC API built with Tonic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axiam-core = { workspace = true }
axiam-authz = { workspace = true }
axiam-auth = { workspace = true }
tonic = { workspace = true, features = ["tls-ring"] }
tonic-prost = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tower_governor = { workspace = true }
governor = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
secrecy = { workspace = true }
axiam-db = { workspace = true }
surrealdb = { workspace = true }
futures = { version = "0.3.32", default-features = false, features = ["std"] }

[features]
client = []

[dev-dependencies]
axiam-auth = { workspace = true }
surrealdb = { workspace = true, features = ["kv-mem"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
# Test-only: installs the process-level rustls CryptoProvider (mirrors
# axiam-server's main()) so the TLS-enabled `start_grpc_server` boot test
# doesn't hit "Could not automatically determine the process-level
# CryptoProvider" — tonic's `ServerTlsConfig` resolves the default provider,
# and two providers (ring + aws-lc-rs) are linked transitively with none
# installed by default in a bare test binary.
rustls = { workspace = true, features = ["ring"] }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }

# The gRPC authz integration tests need generated client stubs, which are only
# produced under the `client` feature (build.rs gates on CARGO_FEATURE_CLIENT).
# `required-features` makes Cargo SKIP this target when the feature is off
# (so `cargo test --workspace` compiles cleanly) and build+run it when the
# feature is enabled (`cargo test -p axiam-api-grpc --features client`).
[[test]]
name = "grpc_authz_test"
required-features = ["client"]

[[test]]
name = "grpc_auth_test"
required-features = ["client"]

[[test]]
name = "grpc_userinfo_test"
required-features = ["client"]
