[package]
name = "axiam-api-rest"
description = "AXIAM REST API built with Actix-Web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axiam-core = { workspace = true }
axiam-auth = { workspace = true }
axiam-authz = { workspace = true }
axiam-db = { workspace = true }
axiam-audit = { workspace = true }
axiam-amqp = { workspace = true }
axiam-oauth2 = { workspace = true }
# webhook_consumer.rs (CORR-03/26-07) — the durable webhook AMQP consumer
# drives lapin::Channel directly (mirrors axiam-amqp's mail_consumer.rs
# shape), so this crate needs the same lapin/futures-lite pair axiam-amqp
# already depends on. Workspace-pinned versions — no new external package.
lapin = { workspace = true }
futures-lite = { workspace = true }
# default-features (=false) is inherited from [workspace.dependencies]; the
# `saml` feature below re-enables it (on by default via this crate's `default`).
axiam-federation = { workspace = true }
axiam-pki = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
actix-cors = { workspace = true }
actix-governor = { workspace = true }
tracing-actix-web = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
# D3: parse SAN/SPKI from the rustls-verified client certificate (native mTLS).
x509-parser = { workspace = true }
url = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
secrecy = { workspace = true }

surrealdb = { workspace = true }
webauthn-rs-proto = { workspace = true }
futures = { version = "0.3.32", default-features = false, features = ["std"] }

[features]
# SAML SP endpoints + DTOs. Forwards to axiam-federation/saml (→ samael).
# On by default; disable with `--no-default-features` to build on hosts whose
# system libxml2 is incompatible with samael (e.g. Arch libxml2 2.15.x).
default = ["saml"]
saml = ["axiam-federation/saml"]

[dev-dependencies]
actix-rt = { workspace = true }
actix-http = { workspace = true }
surrealdb = { workspace = true, features = ["kv-mem"] }
tokio-test = { workspace = true }
totp-rs = { workspace = true }
jsonwebtoken = { workspace = true }
# 23-06: real template rendering in the action_url substitution test — proves
# the emailed link is fully substituted, not a source-file grep (23-RESEARCH
# Pitfall 3).
axiam-email = { workspace = true }
# 24-06: captures the structured tracing audit DLQ event as a plain writer in
# gdpr_audit_dlq_test.rs, asserting the "audit syslog" sink fires (SECHRD-12).
tracing-subscriber = { workspace = true }
# 28-05: mock external OIDC IdP (discovery/JWKS/token endpoints) for the
# first-time-SSO e2e (CQ-B40). Versions/rationale mirror axiam-server's
# existing req5_oidc_e2e.rs dev-dependencies exactly.
wiremock = "0.6"
rsa = { version = "0.9", features = ["sha2"] }
# rsa 0.9 requires a rand_core 0.6 CryptoRng; the workspace `rand` (0.9) ThreadRng
# does not satisfy it. Use rand_core 0.6 OsRng for RSA test-key generation.
rand_core = { version = "0.6", features = ["getrandom"] }
# Generates ephemeral Ed25519 JWT signing keypairs at test runtime instead of
# embedding literal PEM key material in source (GitGuardian: no new secret
# literals). Already a workspace dependency (axiam-pki, axiam-server).
rcgen = { workspace = true }
