[package]
name = "axiam-auth"
description = "AXIAM authentication: password hashing, JWT, MFA"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axiam-core = { workspace = true }
argon2 = { workspace = true }
# argon2 re-exports `password-hash`; its `getrandom` feature provides
# `password_hash::rand_core::OsRng` used by `SaltString::generate` in
# password.rs. This feature was previously pulled in transitively by
# aes-gcm 0.10's `aead` (rand_core/getrandom); aes-gcm 0.11 no longer does,
# so it is requested explicitly here to keep salt generation unchanged.
password-hash = { version = "0.5", features = ["getrandom"] }
jsonwebtoken = { workspace = true }
totp-rs = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
aes-gcm = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
url = { workspace = true }
webauthn-rs = { workspace = true }
# webauthn-rs-proto: removed — only webauthn-rs is used directly in axiam-auth; types come through webauthn-rs re-exports

[dev-dependencies]
axiam-db = { workspace = true }
criterion = { version = "0.8.2", features = ["html_reports"] }
surrealdb = { workspace = true, features = ["kv-mem"] }
tokio-test = { workspace = true }

[[bench]]
name = "auth_bench"
harness = false
