[package]
name = "axiam-authz"
description = "AXIAM authorization engine: RBAC with resource hierarchy and scopes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axiam-core = { workspace = true }
# serde: re-exported via axiam-core; verified by cargo check
serde = { workspace = true }
tokio = { workspace = true }
# tracing: used via macros in engine.rs and middleware; verified by cargo check
tracing = { workspace = true }
# thiserror: used for AuthzError derive; verified by cargo check
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
axiam-db = { path = "../axiam-db" }
surrealdb = { workspace = true, features = ["kv-mem"] }
tokio-test = "0.4"
serde_json = { workspace = true }
criterion = { version = "0.8.2", features = ["html_reports", "async_tokio"] }
futures = "0.3.32"
# chrono: build model timestamps in the counting-mock repositories used by the
# D1 batch-coalescing round-trip-count test; verified by cargo test.
chrono = { workspace = true }

[[bench]]
name = "authz_bench"
harness = false
