[package]
name = "axiam-db"
description = "AXIAM SurrealDB repository implementations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axiam-core = { workspace = true }
argon2 = { workspace = true }
surrealdb = { workspace = true }
surrealdb-types = "3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
surrealdb = { workspace = true, features = ["kv-mem"] }
tokio-test = { workspace = true }
