[package]
name = "axiam-federation"
description = "AXIAM federation: SAML SP and OIDC external IdP integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axiam-auth = { workspace = true }
axiam-core = { workspace = true }
axiam-db = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
samael = { workspace = true, optional = true }
flate2 = { workspace = true }
x509-parser = { workspace = true }
pem = { workspace = true }
# XSW (XML Signature Wrapping) binding check (SECFIX-04/SEC-005): raw-XML
# introspection to bind the verified <ds:Signature> Reference to the
# consumed Assertion. Already resolved transitively via samael 0.0.19's
# `xmlsec` feature (Cargo.lock pins 0.3.3) — promoted to a direct dependency
# here so axiam-federation can call it. Pinned (workspace) to the EXACT
# Cargo.lock-resolved version to guarantee a single copy of the FFI bindings
# (no new crate enters the dependency graph). Gated behind the `saml` feature
# like samael itself.
libxml = { workspace = true, optional = true }

[features]
# SAML Service Provider support. Pulls in `samael` (and transitively its
# `xmlsec` feature → libxmlsec1/libxml2 FFI). Enabled by default so production
# and CI builds get full SAML with real XML-DSig signature verification.
#
# Disable (`--no-default-features`) to build without samael — required on hosts
# whose system libxml2 is too new for samael's pinned bindings (e.g. Arch's
# libxml2 2.15.x). OIDC federation is unaffected; SAML simply isn't compiled.
default = ["saml"]
saml = ["dep:samael", "dep:libxml"]

[dev-dependencies]
rcgen = { workspace = true }
base64 = { workspace = true }
