[package]
name = "axiam-pki"
description = "AXIAM PKI — Certificate management, CA operations, and GnuPG integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axiam-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rcgen = { workspace = true }
x509-parser = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = { workspace = true }
pgp = { workspace = true }
smallvec = "1"
time = "0.3"
