[package]
name = "axiam-server"
description = "AXIAM server binary — composes all crates and starts the application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axiam-core = { workspace = true }
axiam-db = { workspace = true }
axiam-auth = { workspace = true }
axiam-authz = { workspace = true }
axiam-api-rest = { workspace = true }
axiam-api-grpc = { workspace = true }
axiam-amqp = { workspace = true }
axiam-oauth2 = { workspace = true }
axiam-federation = { workspace = true }
axiam-audit = { workspace = true }
axiam-pki = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-log = "0.2"
config = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
axiam-core = { workspace = true }
axiam-db = { workspace = true }
axiam-auth = { workspace = true }
axiam-federation = { workspace = true }
surrealdb = { workspace = true, features = ["kv-mem"] }
surrealdb-types = "3"
tokio-test = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
serde_json = { workspace = true }
wiremock = "0.6"
rsa = { version = "0.9", features = ["sha2"] }
