[package]
name = "axiam-server"
description = "AXIAM server binary — composes all crates and starts the application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axiam-core = { workspace = true }
axiam-db = { workspace = true }
axiam-auth = { workspace = true }
axiam-authz = { workspace = true }
# default-features (=false) inherited from [workspace.dependencies]; the `saml`
# feature below re-enables SAML across api-rest + federation (on by default).
axiam-api-rest = { workspace = true }
axiam-api-grpc = { workspace = true }
axiam-amqp = { workspace = true }
axiam-oauth2 = { workspace = true }
axiam-federation = { workspace = true }
axiam-audit = { workspace = true }
axiam-pki = { workspace = true }
# `rustls-0_23` enables `HttpServer::bind_rustls_0_23` for the opt-in direct-TLS
# path (F-04); TLS termination still defaults to the proxy layer.
actix-web = { workspace = true, features = ["rustls-0_23"] }
# D3: name the concrete accepted-connection type in `HttpServer::on_connect` so
# the rustls-VERIFIED peer certificate can be lifted into the connection
# extensions. actix-web already pulls actix-tls in transitively with the same
# feature; this is a direct dep only so the `TlsStream` type path is nameable.
actix-tls = { version = "3", features = ["rustls-0_23"] }
# Explicit `ring` provider for the TLS 1.3-only server config (see src/tls.rs).
# PEM parsing uses rustls-pki-types' `PemObject` (re-exported by rustls) rather
# than the unmaintained rustls-pemfile (RUSTSEC-2025-0134).
rustls = { workspace = true, features = ["ring"] }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-log = "0.2"
config = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
surrealdb = { workspace = true }
# Used by src/cleanup.rs (library source), so these must be prod deps, not dev-only (REQ-12).
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
secrecy = { workspace = true }
# D9 (memory-retention experiment): optional jemalloc global allocator, gated
# behind the `jemalloc` feature below. NOT a default dependency — omitted
# entirely from a default build's dependency graph. See
# claude_dev/memory-retention-experiment.md for the A/B procedure and
# rationale; measurement is pending laptop hardware, so this stays opt-in
# until data justifies flipping the default.
tikv-jemallocator = { version = "0.7", optional = true }

[features]
# SAML SP support, forwarded to the api-rest and federation crates (→ samael).
# On by default; `--no-default-features` builds the server without SAML/samael
# so it compiles on hosts with an incompatible system libxml2 (e.g. Arch 2.15.x).
default = ["saml"]
saml = ["axiam-api-rest/saml", "axiam-federation/saml"]
# D9: swap the process global allocator from the platform default (glibc
# malloc in the release container image) to jemalloc via tikv-jemallocator.
# Default-OFF — enabling this changes nothing else about the build; it exists
# so the maintainer can A/B retained RSS after a login burst on real hardware
# (`cargo build --release -p axiam-server --features jemalloc`). See
# claude_dev/memory-retention-experiment.md for the full procedure and the
# decay-tuning env vars (`MALLOC_CONF`/`_RJEM_MALLOC_CONF`).
jemalloc = ["dep:tikv-jemallocator"]

[dev-dependencies]
axiam-core = { workspace = true }
axiam-db = { workspace = true }
axiam-auth = { workspace = true }
axiam-federation = { workspace = true }
surrealdb = { workspace = true, features = ["kv-mem"] }
surrealdb-types = "3"
tokio-test = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
wiremock = "0.6"
rsa = { version = "0.9", features = ["sha2"] }
actix-rt = { workspace = true }
actix-http = { workspace = true }
# D3: generate a throwaway CA + server/client leaf certs for the native-mTLS
# verifier construction and in-process rustls handshake tests.
rcgen = { workspace = true }
# rsa 0.9 requires a rand_core 0.6 CryptoRng; the workspace `rand` (0.9) ThreadRng
# does not satisfy it. Use rand_core 0.6 OsRng for RSA test-key generation.
rand_core = { version = "0.6", features = ["getrandom"] }
